Closed
Bug 1613712
Opened 6 years ago
Closed 6 years ago
WebGLContext::GetVRFrame freezes when the canvas was not composited
Categories
(Core :: Graphics: CanvasWebGL, defect, P1)
Core
Graphics: CanvasWebGL
Tracking
()
RESOLVED
FIXED
mozilla74
Tracking | Status | |
---|---|---|
firefox74 | --- | fixed |
People
(Reporter: mortimergoro, Assigned: mortimergoro)
Details
Attachments
(1 file)
See Bug 1492554
WebXR samples now use a canvas not added to the DOM by default.
This is a regression from the WebGL remoting client/host refactor.
Assignee | ||
Updated•6 years ago
|
Assignee: nobody → imanol
Assignee | ||
Comment 1•6 years ago
|
||
Fix regression from the WebGL remoting client/host refactor.
![]() |
||
Updated•6 years ago
|
Priority: -- → P1
Pushed by igorostizaga@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5e1fdd4ae2ff
Pass a correct compositorConnection instead of null ptr in the GLScreenBuffer::CreateFactory call used to ensure that a not added to DOM canvas is ready for VR. r=jgilbert
![]() |
||
Updated•6 years ago
|
Status: NEW → ASSIGNED
![]() |
||
Comment 3•6 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox74:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
You need to log in
before you can comment on or make changes to this bug.
Description
•