Bug 1613712 - Pass a correct compositorConnection instead of null ptr in  the GLScreenBuffer::CreateFactory call used to ensure that a not added to DOM canvas is ready for VR. r=jgilbert

Fix regression from the WebGL remoting client/host refactor.

Differential Revision: https://phabricator.services.mozilla.com/D61878